[gd_scene load_steps=2 format=3 uid="uid://c4bymtw3y5q8"]

[ext_resource type="Script" path="res://Entities/Brush.gd" id="1_5vfio"]

[node name="Brush" type="Node2D"]
script = ExtResource("1_5vfio")

[node name="TextureButton" type="TextureButton" parent="."]
offset_right = 40.0
offset_bottom = 40.0

[node name="Spawn1" type="Marker2D" parent="."]
position = Vector2(-137, 0)

[node name="Spawn2" type="Marker2D" parent="."]
position = Vector2(-50, 0)

[node name="Spawn3" type="Marker2D" parent="."]
position = Vector2(47, 0)

[node name="Spawn4" type="Marker2D" parent="."]
position = Vector2(134, 0)

[connection signal="pressed" from="TextureButton" to="." method="_on_texture_button_pressed"]
